fixed collapse sidebar btn

--- a/css/index.css
+++ b/css/index.css
@@ -230,6 +230,15 @@ a.article, a.article:hover {
 
 
 /* ---------------------------------------------------
+    BOOTSTRAP OVERRIDES
+----------------------------------------------------- */
+
+#carouselExampleControls {
+    -moz-box-shadow: 9px 9px 23px -9px rgba(0,0,0,0.5);
+    box-shadow: 9px 9px 23px -9px rgba(0,0,0,0.5);
+}
+
+/* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
 @media (max-width: 768px) {
